fix: gate the release behind tag

--- a/.github/workflows/create-releases-from-installations.yml
+++ b/.github/workflows/create-releases-from-installations.yml
@@ -27,6 +27,7 @@ jobs:
           mv "$MODPACK-$LAUNCHER-$TIMESTAMP.zip" ../..
       - name: Create Release
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: ${{ env.TIMESTAMP }}
           files: |
