--- a/modpack/config/dummmmmmy-common.toml
+++ b/modpack/config/dummmmmmy-common.toml
@@ -36,5 +36,5 @@
 	damage_mode = "LOCAL_PLAYER"
 	#Show healing taken for
 	#Allowed Values: ALL_ENTITIES, ALL_PLAYERS, LOCAL_PLAYER, NONE
-	healing_mode = "ALL_ENTITIES"
+	healing_mode = "LOCAL_PLAYER"
 
